fixed spacing and layout issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -105,6 +105,8 @@ body {
 		position: absolute;
 		width: 100%;
 		min-height: 600px;
+		top: 0;
+		bottom: 0;
 	}
 
 	.content {
@@ -117,12 +119,16 @@ body {
 
 /* @group main structure */
 
-	#welcome {
+	header {
+		text-align: center;
+		font-size: 62px;
+		line-height: 62px;
+		margin-top: 20px;
+	}
+
+	#featured {
 		position: absolute;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
+		top: 28%;
 	}
 
 	#blog {
@@ -133,12 +139,6 @@ body {
 		left: 0;
 	}
 
-	header {
-		text-align: center;
-		font-size: 62px;
-		line-height: 62px;
-		margin-top: 20px;
-	}
 
 	nav {
 		text-align: center;
@@ -149,7 +149,7 @@ body {
 		display: block;
 		width: 100%;
 		padding-bottom: 120px;
-		background: red url(white_gradient.png) repeat-x 0 100%;
+		background: url(white_gradient.png) repeat-x 0 100%;
 		z-index: 1;
 	}
 
@@ -201,9 +201,7 @@ body {
 	}
 
 	#subscribe {
-		position: relative;
-		left: 50%;
-		margin-left: -175px; /*352/2*/
+		display: inline-block;
 	}
 
 	.subscribe_form {
@@ -218,7 +216,7 @@ body {
 	}
 
 	button {
-		display: inline-block;
+		float: left;
 		margin-left: 0;
 		height: 44px;
 		vertical-align: bottom;
@@ -226,7 +224,6 @@ body {
 		background-color: black;
 		color: #fff;
 		font-size: 20px;
-		float: left;
 		cursor: pointer;
 	}
 
